<resources>
    <string name="app_name">Word game</string>
    <string name="progressTitle">Progress</string>
    <string name="selectCharTitle">Find a word!</string>
    <string  name="solutionText">Your solution</string>
    <string name="wordFoundText">Words found</string>
    <string name="answerText">ANSWER</string>
    <string name="resetText">RESET</string>
    <string name="gobackText">UNDO</string>
    <string name="newgameText">NEW GAME</string>
    <string name="solutionsFoundText">Solutions found</string>
    <string name="allSolutuionsText">All solutions</string>
    <string name="rulesText">Rules</string>
    <string name="changeText">Change</string>
    <string name="difficultyText">Change difficulty</string>
    <string name="labelMaxWordsText">Max number of characters in a word</string>
    <string name="labelMaxCharsText">Number of words to win</string>
    <string name="changeLangaugeText">Change language</string>
    <string name="changeResponseText">Change done</string>
    <string name="continueText">Continue</string>
    <string name="mainMenuText">Main menu</string>
    <string name="backtoGameText">Back to game</string>
    <string name="changeDifficultyText">Change difficulty</string>
    <string name="ruleInfo">Main goal is to find words containing the middle character.
                         You cant submit the same word twice. By pressing the dice,you will randomize the characters surrounding the middle character.</string>
</resources>