<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="730dp"
    android:background="#31615D"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">
    //

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="649dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/viewList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:backgroundTint="#000000"
            android:orientation="vertical"
            tools:layout_marginLeft="60dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:srcCompat="@drawable/dice" />

            <Button
                android:id="@+id/continueKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#26852A"
                android:text="@string/continueText" />

            <Button
                android:id="@+id/newgameKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#BF2519"
                android:text="@string/newgameText" />

            <Button
                android:id="@+id/wordsfoundKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#1D6281"
                android:text="@string/wordFoundText"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/rulesKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#1D6281"
                android:text="@string/rulesText"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/allsolutionsKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#1D6281"
                android:text="@string/allSolutuionsText"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/changedifficultyKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#1D6281"
                android:text="@string/changeDifficultyText"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/changeLanguageKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#1D6281"
                android:text="@string/changeLangaugeText"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/exitKnapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#BF2519"
                android:text="EXIT" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="WORD GUESSING GAME"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>